# discasa

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  documentation.md  hard-reset.bat  package-lock.json  package.json  start-all.bat  start-app.bat  start-bot.bat  start-discasa-hard-reset.bat  start-discasa.bat  stop-all.bat  stop-discasa-servers.bat  stop.bat
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  Main.tsx  album-modal-overrides.css  app-logic.ts  gallery-stage2.css  gallery-stage8.css  main.tsx  mainn.tsx  recovery.css  styles.css  ui-types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: package.json  tsconfig.json
apps/server/scripts/: migrate-legacy-media-edits.ts
art/: Discasa-avatar.psd  Discasa-icon.psd  generate_discasa_assets.py  generate_discasa_default_avatar.py
art/app/: app-default-avatar-source.psd  app-logo-source.psd
art/bot/: bot-icon-source.psd
art/scripts/: generate-app-default-avatar.py  generate-app-icons.py
discasa_app/: README.md  start.bat  stop.bat
discasa_app/art/: generate_discasa_logo.py
discasa_bot/: .env.example  README.md  package.json  start.bat  stop.bat  tsconfig.json
discasa_bot/art/: Discasa-bot-banner.psd
discasa_bot/src/: config.ts  discord-service.ts  discord.ts  errors.ts  index.ts  logger.ts  server.ts  storage-types.ts
docs/architecture/: discasa.md  v0.1.md
img/scripts/: generate-app-default-avatar.py  generate-app-icons.py
(+56 files in other folders)
